test/classes/deitz/inherit/test_inherit_error2.good
test_inherit_error2.chpl:1: error: Class hierarchy is cyclic
